--- a/nav-bar/nav.html
+++ b/nav-bar/nav.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day-1 navbar</title>
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-
+    <div class="navbar">
+        <div class="brand">
+            <h2>Logo</h2>
+        </div>
+        <div class="nav">
+            <!--You can design menu-->
+            <a href="#">Download</a>
+        </div>
+    </div>
 </body>
 
 </html>
